# agentflow-xrpl

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml
backend/: .env.example  README.md  __init__.py  actions.py  current_cached_user_data.json  did_verification_module.py  email_verification_module.py  escrow_module.py  helpers.py  pending_verifications.json  requirements.txt  start_server.py  states.py  summary_module.py  web_server.py
backend/generation_agents/: did_agents.py  escrow_agents.py  summary_agents.py  ui_form_agents.py
backend/templates/: approved_loan.html  password_field.html  rejected_loan.html  submit_button.html  text_field.html
src/: App.tsx  index.css
src/components/: BishmithCard.css  BishmithCard.tsx  CardSwap.css  CardSwap.tsx  Dock.css  Dock.tsx  Header.css  Header.tsx  Modal.css  Modal.tsx  NodesSidebar.css  NodesSidebar.tsx  ProfileCard.css  ProfileCard.tsx  UtkarshCard.css  UtkarshCard.tsx  YuvCard.css  YuvCard.tsx
src/hooks/: useModal.ts  useTheme.ts
src/pages/: LandingPage.css  LandingPage.tsx  MarketData.css  MarketData.tsx  Projects.css  Projects.tsx  Team.css  Team.tsx  WorkflowBuilder.css  WorkflowBuilder.tsx
