[tool.poetry]
name = "xrpl-microfinance-did"
version = "0.1.0"
description = "XRPL DID Verification Module for Microfinance Applications"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false  # Use Poetry only for dependency management

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
xrpl-py = "2.6.0"
cryptography = "^3.4.8"
requests = "^2.28.0"
python-dateutil = "^2.8.2"
aiohttp = "^3.8.0"
websockets = "^11.0"
python-dotenv = "^1.0.0"

# Web framework dependencies
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.0.0"
python-jose = "^3.3.0"
jinja2 = "^3.1.0"

# LLM provider dependencies
openai = "^1.3.0"

# Resolve dependency conflicts
httpx = ">=0.24.0,<0.25.0"
httpcore = ">=0.17.0,<1.0.0"

# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
httpx = ">=0.24.0,<0.25.0"  # For testing HTTP endpoints

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "xrpl.*",
    "cryptography.*",
]
ignore_missing_imports = true 